<resources>
    <string name="app_name">Login</string>
    <string name="app_email">E-mail</string>
    <string name="app_pass">Senha</string>
    <!--Tela de Login-->
    <string name="button">Login</string>
    <string name="registration_text">Não tem cadastro? Clique aqui!</string>
    <!--Tela de Cadastro-->
    <string name="register">Cadastro</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="button_register">Cadastrar</string>
    <!--Tela de Acesso-->
    <string name="access">Login realizado com sucesso!</string>
    <string name="exit">Sair</string>

</resources>