<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:boxBackgroundColor="@color/white">

            <EditText
                android:id="@+id/editEmail"
                android:background="@drawable/rounded_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:focusable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passworLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true"
            android:layout_below="@+id/textEmail">

            <EditText
                android:id="@+id/editPass"
                android:background="@drawable/rounded_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/app_pass"
                android:layout_below="@id/editEmail"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/butLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_border"
            android:text="@string/button"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/passworLayout"/>

        <TextView
            android:id="@+id/textRegister"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/registration_text"
            android:layout_below="@id/butLogin" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>